--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,11 +14,11 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@langchain/core": "^0.3.42",
-    "@langchain/langgraph": "^0.2.55",
+    "@langchain/core": "^0.3.45",
+    "@langchain/langgraph": "^0.2.64",
+    "@langchain/langgraph-cli": "^0.0.30",
+    "@langchain/langgraph-sdk": "^0.0.73",
     "@langchain/langgraph-api": "^0.0.16",
-    "@langchain/langgraph-cli": "^0.0.16",
-    "@langchain/langgraph-sdk": "^0.0.57",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -55,11 +55,11 @@
     "embla-carousel-react": "^8.5.2",
     "core": "workspace:^",
     "database": "workspace:^",
-    "shared-libs": "workspace:^"
+    "shared-libs": "workspace:^",
+    "@tailwindcss/postcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@tailwindcss/postcss": "^4.0.13",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
@@ -76,7 +76,7 @@
     "next": "^15.2.3",
     "postcss": "^8.5.3",
     "tailwind-scrollbar": "^4.0.1",
-    "tailwindcss": "^4.0.13",
+    "tailwindcss": "^4.0.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0"
   },
