--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Your Name",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"turbo dev --filter=web\" \"turbo dev --filter=agents\"",
+    "dev": "concurrently \"turbo dev --filter=web\" \"langgraphjs dev --no-browser\"",
     "build": "turbo build",
     "turbo:command": "turbo",
     "format": "turbo format",
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-no-instanceof": "^1.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "@langchain/langgraph-cli": "^0.0.30"
   },
   "resolutions": {
     "@langchain/core": "^0.3.42"
