--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "author": "Your Name",
   "private": true,
   "scripts": {
+    "setup": "node setup.mjs",
+    "setup:bash": "chmod +x setup.sh && ./setup.sh",
+    "validate-setup": "node validate-setup.mjs",
     "dev": "concurrently \"turbo dev --filter=web\" \"langgraphjs dev --no-browser\"",
     "build": "turbo build",
     "turbo:command": "turbo",
