--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -28,3 +28,10 @@ dist-ssr
 .env
 .next/
 next-env.d.ts
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
