--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,16 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test:unit": "jest --passWithNoTests",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@langchain/core": "^0.3.45",
     "@langchain/langgraph": "^0.2.64",
+    "@langchain/langgraph-api": "^0.0.16",
     "@langchain/langgraph-cli": "^0.0.30",
     "@langchain/langgraph-sdk": "^0.0.73",
-    "@langchain/langgraph-api": "^0.0.16",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -26,9 +28,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/postcss": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "core": "workspace:^",
+    "database": "workspace:^",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "esbuild": "^0.25.0",
     "esbuild-plugin-tailwindcss": "^2.0.1",
     "framer-motion": "^12.4.9",
@@ -36,30 +42,32 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.1",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.1",
-    "nuqs": "^2.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.15.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "shared-libs": "workspace:^",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "use-stick-to-bottom": "^1.0.46",
     "uuid": "^11.0.5",
-    "zod": "^3.24.2",
-    "embla-carousel-react": "^8.5.2",
-    "core": "workspace:^",
-    "database": "workspace:^",
-    "shared-libs": "workspace:^",
-    "@tailwindcss/postcss": "^4.0.9"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@playwright/test": "^1.55.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
@@ -67,17 +75,21 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
-    "turbo": "latest",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.2.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.2.0",
     "next": "^15.2.3",
     "postcss": "^8.5.3",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.6",
-    "typescript": "~5.7.2",
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
+    "turbo": "latest",
+    "typescript": "~5.7.3",
     "typescript-eslint": "^8.22.0"
   },
   "overrides": {
