tweaks: improve readme & fix e2e tests & add latency/failure simulation

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
-# LANGSMITH_API_KEY=""
-# LANGSMITH_TRACING_V2="true"
-# LANGSMITH_PROJECT="default"
+# Next.js Configuration
+NEXT_PUBLIC_API_URL=http://localhost:2024
+NEXT_PUBLIC_ASSISTANT_ID=agent
 
-TAVILY_API_KEY=""
-ANTHROPIC_API_KEY=""
-ELASTICSEARCH_URL=""
-ELASTICSEARCH_USER=""
-ELASTICSEARCH_PASSWORD=""
-ELASTICSEARCH_API_KEY=""
-MONGODB_URI=""
-PINECONE_API_KEY=""
-PINECONE_ENVIRONMENT=""
-PINECONE_INDEX_NAME=""
-COHERE_API_KEY=""
-OPENAI_API_KEY=""
+# Database Configuration
+DATABASE_URL="your-database-connection-string-here"
+DIRECT_URL="your-direct-database-connection-string-here"
+PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK=1
+
+# LLM & Agents Server API Keys
+OPENAI_API_KEY="your-openai-api-key-here"
+API_URL="http://localhost:2024"
+
+# Latency & Failure Simulation (for testing)
+SIMULATION_ENABLED=true
+SIMULATION_LATENCY_MIN=300
+SIMULATION_LATENCY_MAX=1200
+SIMULATION_ERROR_RATE=15
