--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -31,11 +31,12 @@
     "@pinecone-database/pinecone": "^5.1.1",
     "core": "workspace:^",
     "database": "workspace:^",
-    "shared-libs": "workspace:^",
-    "testing": "workspace:^",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.19",
     "mongodb": "^6.14.2",
+    "shared-libs": "workspace:^",
+    "testing": "workspace:^",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
