--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,34 @@ PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK=1
 OPENAI_API_KEY="your-openai-api-key-here"
 API_URL="http://localhost:2024"
 
+# Model Configuration
+MODEL_PROVIDER=openai
+MODEL_NAME=gpt-4o
+MODEL_TEMPERATURE=0
+MODEL_MAX_TOKENS=4096
+MODEL_TIMEOUT=30000
+
+# Database Configuration (Advanced)
+DATABASE_TIMEOUT=10000
+DATABASE_RETRIES=3
+DATABASE_POOL_SIZE=10
+
+# Retry Configuration
+RETRY_MAX_ATTEMPTS=3
+RETRY_BASE_DELAY=1000
+RETRY_MAX_DELAY=10000
+RETRY_EXPONENTIAL_BACKOFF=true
+
+# Circuit Breaker Configuration
+CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+CIRCUIT_BREAKER_TIMEOUT=60000
+CIRCUIT_BREAKER_MONITORING_PERIOD=10000
+
+# Logging Configuration
+LOG_LEVEL=info
+ENABLE_REQUEST_LOGGING=true
+ENABLE_PERFORMANCE_LOGGING=true
+
 # Latency & Failure Simulation (for testing)
 SIMULATION_ENABLED=true
 SIMULATION_LATENCY_MIN=300
