--- a/apps/libs/shared-libs/package.json
+++ b/apps/libs/shared-libs/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "loglevel": "^1.9.2",
-    "p-map": "^7.0.3"
+    "p-map": "^7.0.3",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
